--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ blockquote + ul + p,
   border-radius: 100%;
   border: 1px solid #d9d9d9;
   box-shadow: 0 0 5px rgb(187 187 187 / 16%);
+  width: 300px;
 }
 
 :root {
